--- a/3_Hashmap_and_hashtable/2_implementation.ipynb
+++ b/3_Hashmap_and_hashtable/2_implementation.ipynb
@@ -215,9 +215,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Deleting key 37\n",
+      "Deleted item: key 37, Data 97\n",
+      "\n",
+      " Hash Table contents after Deletion: \n",
+      "Index 0: Empty\n",
+      "Index 1: key 1, Data 20\n",
+      "Index 2: key 2, Data 70\n",
+      "Index 3: key 42, Data 80\n",
+      "Index 4: key 4, Data 25\n",
+      "Index 5: key 12, Data 44\n",
+      "Index 6: key 14, Data 32\n",
+      "Index 7: key 17, Data 11\n",
+      "Index 8: key 13, Data 78\n",
+      "Index 9: Empty\n"
+     ]
+    }
+   ],
    "source": [
     "#Delete an item\n",
     "KeyToDelete = 37\n",
