--- a/3_Hashmap_and_hashtable/1_hashmap_concepts.ipynb
+++ b/3_Hashmap_and_hashtable/1_hashmap_concepts.ipynb
@@ -250,12 +250,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: 5, value: 15\n",
+      "Key: 6, value: 20\n"
+     ]
+    }
+   ],
    "source": [
     "for key, value in my_dict.items():\n",
     "    print(f\"Key: {key}, value: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in my_dict.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in my_dict.values():\n",
+    "    print(value)"
    ]
   }
  ],
