--- a/5_string_manipulation/2_problems.ipynb
+++ b/5_string_manipulation/2_problems.ipynb
@@ -73,13 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def is_palindrome(s):\n",
     "    s = s.lower().replace(\" \", \"\")\n",
-    "    return s == s[::-1]"
+    "    return s == s[::-1]\n",
+    "\n",
+    "print(is_palindrome(\"madam\"))\n",
+    "print(is_palindrome(\"hello\"))  "
    ]
   }
  ],
