--- a/6_sliding_window_technique/1_concept.ipynb
+++ b/6_sliding_window_technique/1_concept.ipynb
@@ -62,40 +62,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
-   "source": [
-    "def longest_unique_substring(s):\n",
-    "    sett = set() #To store unique characters in the window\n",
-    "    left = 0\n",
-    "    max_length = 0\n",
-    "\n",
-    "    for right in range(len(s)): #right pointer expands the substring\n",
-    "        #If the character at right is already in the set, shrink the window\n",
-    "        while s[right] in sett:\n",
-    "            sett.remove(s[left])\n",
-    "            left += 1\n",
-    "\n",
-    "        #Add a new character to the set and update max length\n",
-    "        sett.add(s[right])\n",
-    "        max_length = max(max_length, right - left + 1)\n",
-    "    \n",
-    "    return max_length\n",
-    "\n",
-    "print(longest_unique_substring('acdabcdab'))\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,33 +88,374 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def max_sum_subarray(arr, k):\n",
-    "    window_sum = 0\n",
-    "    max_sum = []\n",
+    "1. Constant window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def maximum_sum(arr, k):\n",
+    "    n = len(arr)\n",
     "\n",
-    "    if len(arr) < k:\n",
-    "        return -1\n",
+    "    if n < k:\n",
+    "        return None\n",
+    "    l = 0\n",
+    "    r = k-1\n",
     "    \n",
-    "    window_sum = sum(arr[:k])\n",
-    "    max_sum = window_sum\n",
+    "    current_sum = sum(arr[l:r+1])\n",
+    "    max_number = current_sum\n",
+    "    while(r < n):\n",
+    "        current_sum = current_sum - arr[l]\n",
+    "        l += 1\n",
+    "        r += 1\n",
     "\n",
-    "    for i in range(k, len(arr)):\n",
-    "        window_sum += arr[i] - arr[i-k]\n",
-    "        max_sum = max(max_sum, window_sum)\n",
+    "        current_sum = current_sum + arr[r]\n",
+    "\n",
+    "        max_number = max(max_number, current_sum)\n",
+    "\n",
+    "        return max_number   \n",
+    "\n",
+    "\n",
+    "print(maximum_sum([-1,2,3,1,1,1,-1], 4))\n",
     "    \n",
-    "    return max_sum\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Longest subarray with sum <= k "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. Brute force approach , where k = 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sub_arrays(arr, k):\n",
+    "    n = len(arr)\n",
+    "    \n",
+    "    max_length = 0\n",
+    "    for i in range(n):\n",
+    "        sum = 0\n",
+    "        for j in range(i,n):\n",
+    "            sum = sum + arr[j]\n",
+    "            if sum <= k:\n",
+    "                max_length = max(max_length, j-i+1)\n",
+    "            else:\n",
+    "                break\n",
+    "    \n",
+    "    return max_length \n",
+    "           \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "\n",
-    "print(max_sum_subarray([2, 1, 5, 1, 3, 2], 3))  # Output: 9\n",
-    "print(max_sum_subarray([1, 2, 3, 4, 5, 6, 7, 8, 9, 10], 4))  # Output: 34\n",
-    "print(max_sum_subarray([5, 1, 2, 3, 4], 2))  # Output: 7\n",
+    "print(sub_arrays([2,5,1,7,10], 14))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. Better appraoch: k = 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_length_of_array(arr, k):\n",
+    "    l = 0\n",
+    "    r = 0\n",
+    "    n = len(arr)\n",
+    "    max_length = 0\n",
+    "    current_sum = 0\n",
+    "    while(r<n):\n",
+    "\n",
+    "        current_sum = current_sum + arr[r]\n",
+    "        while current_sum > k and l<=r:\n",
+    "            current_sum -= arr[l]\n",
+    "            l+=1\n",
+    "        max_length = max(max_length, r-l+1)\n",
+    "\n",
+    "        r+=1\n",
+    "    return max_length\n",
+    "\n",
+    "print(max_length_of_array([2,5,1,10,10],k=14))            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c. Optimal approach "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_length_of_array(arr, k):\n",
+    "    n = len(arr)\n",
+    "    l = 0\n",
+    "    r = 0\n",
+    "    max_length = 0\n",
+    "    current_sum = 0\n",
+    "\n",
+    "    while r < n:\n",
+    "        current_sum = current_sum + arr[r]\n",
+    "\n",
+    "        while current_sum > k and (r-l+1) > max_length:\n",
+    "            current_sum -= arr[l]\n",
+    "            l+=1\n",
+    "\n",
+    "        if current_sum <= k:\n",
+    "            max_length = max(max_length, r-l+1)\n",
+    "\n",
+    "        r+=1\n",
+    "\n",
+    "    return max_length\n",
     "\n",
     "\n",
-    "        \n"
+    "print(max_length_of_array([2, 5, 1, 10, 10], k=14))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Maximum points you can obtain from cards."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_points_from_cards(arr, k):\n",
+    "    lsum = 0\n",
+    "    rsum = 0\n",
+    "    maxsum = 0\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        lsum = lsum + arr[i]\n",
+    "\n",
+    "        maxsum = lsum\n",
+    "    \n",
+    "    n = len(arr)\n",
+    "\n",
+    "    rindex = n-1\n",
+    "    \n",
+    "   \n",
+    "    for i in range(k-1, -1, -1):\n",
+    "        lsum = lsum - arr[i]\n",
+    "        rsum = rsum + arr[rindex]\n",
+    "        rindex = rindex - 1\n",
+    "\n",
+    "        maxsum = max(maxsum, lsum+rsum)\n",
+    "\n",
+    "    return maxsum\n",
+    "\n",
+    "print(max_points_from_cards([6,2,3,4,7,2,1,7,1], 4))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Longest substring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cadbz\n"
+     ]
+    }
+   ],
+   "source": [
+    "def longest_substring(s):\n",
+    "    n = len(s)\n",
+    "    char_set = set()\n",
+    "    l = 0\n",
+    "    max_length = 0\n",
+    "    longest_substring = \"\"\n",
+    "\n",
+    "    for r in range(n):\n",
+    "        while s[r] in char_set:\n",
+    "            char_set.remove(s[l])\n",
+    "            l+=1\n",
+    "        char_set.add(s[r])\n",
+    "        if r-l+1 > max_length:\n",
+    "            max_length = r - l + 1\n",
+    "            longest_substring = s[l:r+1]\n",
+    "    \n",
+    "    return longest_substring\n",
+    "            \n",
+    "   \n",
+    "\n",
+    "\n",
+    "print(longest_substring(\"cadbzabcd\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Max consecutive ones , k = 2 - can flip most of k zeros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) Brute force approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_consecutive_ones(arr, k):\n",
+    "    n = len(arr)\n",
+    "    max_length = 0\n",
+    "    for i in range(n):\n",
+    "        zeros = 0\n",
+    "        for j in range(i, n):\n",
+    "            if arr[j] == 0:\n",
+    "                zeros += 1\n",
+    "            if zeros <= k:\n",
+    "                length = j - i + 1\n",
+    "                max_length = max(max_length, length)\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "\n",
+    "    return max_length\n",
+    "\n",
+    "print(max_consecutive_ones([1,1,1,0,0,0,1,1,1,1,0],2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) optimal solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_consecutive_ones(arr, k):\n",
+    "    zeros = 0\n",
+    "    l = 0\n",
+    "    max_length = 0\n",
+    "    n = len(arr)\n",
+    "\n",
+    "    for r in range(n):\n",
+    "        if arr[r] == 0:\n",
+    "            zeros += 1\n",
+    "\n",
+    "        while zeros > k:\n",
+    "            if arr[l] == 0:\n",
+    "                zeros -= 1\n",
+    "            l+=1\n",
+    "        \n",
+    "        max_length = max(max_length, r-l+1)\n",
+    "\n",
+    "    return max_length\n",
+    "print(max_consecutive_ones([1,1,1,0,0,0,1,1,1,1,0],2))"
    ]
   }
  ],
