--- a/1_BIG O/6_practice.ipynb
+++ b/1_BIG O/6_practice.ipynb
@@ -120,7 +120,13 @@
     "def fibonacci(n):\n",
     "    if n <= 1:\n",
     "        return n\n",
-    "    return fibonacci(n-1) + fibonacci(n-2)"
+    "    return fibonacci(n-1) + fibonacci(n-2)\n",
+    "\n",
+    "\"\"\"\n",
+    "1. Time: O(2^n) --> Recursive calls grow exponentially\n",
+    "2. Space: O(n) --> Stack size for recursive calls\n",
+    "\n",
+    "\"\"\""
    ]
   }
  ],
