--- a/4_two_pointer/1_concepts.ipynb
+++ b/4_two_pointer/1_concepts.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```python\n",
+    "Two pointer Technique:\n",
+    "--> The two pointers technique is a powerful algorithmic strategy commonly used for solving array and string problems efficiently.\n",
+    "\n",
+    "\n",
+    "Def: Two pointers are two variables that traverse an array or string simultaneously, often from different directions.\n",
+    "\n",
+    "Used for: \n",
+    "\n",
+    "1) sorting problems\n",
+    "2) searching problems\n",
+    "3) Reversal problems\n",
+    "4) sliding window problems\n",
+    "```\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
