--- a/5_string_manipulation/1_concepts.ipynb
+++ b/5_string_manipulation/1_concepts.ipynb
@@ -345,9 +345,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love bananas\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"I love apples\"\n",
     "result = string.replace(\"apples\", \"bananas\")\n",
