--- a/3_Hashmap_and_hashtable/2_implementation.ipynb
+++ b/3_Hashmap_and_hashtable/2_implementation.ipynb
@@ -254,6 +254,191 @@
     "print(\"\\n Hash Table contents after Deletion: \")\n",
     "display()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Implementation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value1\n"
+     ]
+    }
+   ],
+   "source": [
+    "hashmap = {}\n",
+    "\n",
+    "hashmap[\"key1\"] = \"value1\"\n",
+    "hashmap[\"key2\"] = \"value2\"\n",
+    "\n",
+    "print(hashmap[\"key1\"])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Common problems using hashmaps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.1: Count the frequency of elements in the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 2, 3: 2, 4: 1, 9: 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_frequency(arr):\n",
+    "    freq = {}\n",
+    "    for num in arr:\n",
+    "        if num in freq:\n",
+    "            freq[num] += 1\n",
+    "        else:\n",
+    "            freq[num] = 1\n",
+    "\n",
+    "    return freq\n",
+    "\n",
+    "print(count_frequency([1,1,3,4,3,9,9,9]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.2: Find the first non repeating character"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_non_repeating(s):\n",
+    "    freq = {}\n",
+    "\n",
+    "    for char in s:\n",
+    "        freq[char] = freq.get(char,0)+1\n",
+    "    \n",
+    "    for char in s:\n",
+    "        if freq[char] == 1:\n",
+    "            return char\n",
+    "    \n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(find_non_repeating(\"swiss\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.3: Check if two strings are anagrams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def are_anagrams(s1, s2):\n",
+    "    if len(s1) != len(s2):\n",
+    "        return False\n",
+    "    \n",
+    "    freq1 = {}\n",
+    "    freq2 = {}\n",
+    "\n",
+    "    for char in s1:\n",
+    "        freq1[char] = freq1.get(char,0)+1\n",
+    "    \n",
+    "    for char in s2:\n",
+    "        freq2[char] = freq2.get(char,0)+1\n",
+    "\n",
+    "    return freq1 == freq2\n",
+    "\n",
+    "print(are_anagrams(\"listen\", \"silent\"))  \n",
+    "print(are_anagrams(\"hello\", \"world\"))  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Two sum problem using hashmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def two_sum(arr, target):\n",
+    "    hashmap = {}\n",
+    "    for i, num in enumerate(arr):\n",
+    "        complement = target - num\n",
+    "        if complement in hashmap:\n",
+    "            return [hashmap[complement], i]\n",
+    "        \n",
+    "        else:\n",
+    "            hashmap[num] = 1\n",
+    "\n",
+    "print(two_sum([2,1,5,3], 4))\n",
+    "        \n"
+   ]
   }
  ],
  "metadata": {
