--- a/5_string_manipulation/2_problems.ipynb
+++ b/5_string_manipulation/2_problems.ipynb
@@ -93,6 +93,84 @@
     "print(is_palindrome(\"madam\"))\n",
     "print(is_palindrome(\"hello\"))  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Find the Index of the First Occurrence in a String\n",
+    "Given two strings needle and haystack, return the index of the first occurrence of needle in haystack, or -1 if needle is not part of haystack.\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_first_occurence(haystack, needle):\n",
+    "    n, m = len(haystack), len(needle)\n",
+    "\n",
+    "    if m == 0:\n",
+    "        return 0\n",
+    "    \n",
+    "    for i in range(n-m+1):\n",
+    "        if haystack[i:i+m] == needle:\n",
+    "            return i\n",
+    "        \n",
+    "    return -1\n",
+    "\n",
+    "print(find_first_occurence(\"hello\",\"ll\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Longest common prefix. \n",
+    "Write a function to find the longest common prefix string amongst an array of strings.\n",
+    "\n",
+    "If there is no common prefix, return an empty string \"\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fl\n"
+     ]
+    }
+   ],
+   "source": [
+    "def longestcommonprefix(strs):\n",
+    "    if not strs:\n",
+    "        return \"\"\n",
+    "    \n",
+    "    prefix = strs[0]\n",
+    "    for string in strs[1:]:\n",
+    "        while not string.startswith(prefix):\n",
+    "            prefix = prefix[:-1]\n",
+    "    return prefix\n",
+    "\n",
+    "            \n",
+    "\n",
+    "print(longestcommonprefix([\"flower\", \"flow\", \"flight\"]))"
+   ]
   }
  ],
  "metadata": {
